--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@iconify/svelte": "^2.2.1",
     "@playwright/test": "^1.20.0",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-static": "^1.0.0-next.29",
@@ -38,7 +39,11 @@
   },
   "type": "module",
   "dependencies": {
+    "@emailjs/browser": "^3.5.0",
     "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.0.1"
+    "rehype-slug": "^5.0.1",
+    "workbox-routing": "^6.5.2",
+    "workbox-strategies": "^6.5.2",
+    "yup": "^0.32.11"
   }
 }
